{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 28,
  "lineage": "a9f7429c-c507-aea9-55d1-467286438985",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:343218219153:internet-gateway/igw-0257795a7ec59abcf",
            "id": "igw-0257795a7ec59abcf",
            "owner_id": "343218219153",
            "tags": {
              "Name": "kafka-enterprise-orders-igw"
            },
            "tags_all": {
              "Name": "kafka-enterprise-orders-igw"
            },
            "vpc_id": "vpc-008f4e611a0d47f81"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:343218219153:route-table/rtb-0c778f86c068776ef",
            "id": "rtb-0c778f86c068776ef",
            "owner_id": "343218219153",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0257795a7ec59abcf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kafka-enterprise-orders-public-rt"
            },
            "tags_all": {
              "Name": "kafka-enterprise-orders-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-008f4e611a0d47f81"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d725df29e18b9ed5",
            "route_table_id": "rtb-0c778f86c068776ef",
            "subnet_id": "subnet-0a8de3f08c379f99a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-063b956878ada7c4c",
            "route_table_id": "rtb-0c778f86c068776ef",
            "subnet_id": "subnet-014a34e66b4e987f8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:343218219153:security-group/sg-076a7fe259a626081",
            "description": "Allow HTTP egress for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-076a7fe259a626081",
            "ingress": [],
            "name": "kafka-enterprise-orders-ecs-sg",
            "name_prefix": "",
            "owner_id": "343218219153",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kafka-enterprise-orders-ecs-sg"
            },
            "tags_all": {
              "Name": "kafka-enterprise-orders-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-008f4e611a0d47f81"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:343218219153:security-group/sg-0560f9de5594e8508",
            "description": "Allow Postgres from ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0560f9de5594e8508",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-076a7fe259a626081"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "kafka-enterprise-orders-rds-sg",
            "name_prefix": "",
            "owner_id": "343218219153",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kafka-enterprise-orders-rds-sg"
            },
            "tags_all": {
              "Name": "kafka-enterprise-orders-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-008f4e611a0d47f81"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ecs_tasks",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:343218219153:subnet/subnet-0a8de3f08c379f99a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a8de3f08c379f99a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "343218219153",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kafka-enterprise-orders-public-a"
            },
            "tags_all": {
              "Name": "kafka-enterprise-orders-public-a"
            },
            "vpc_id": "vpc-008f4e611a0d47f81"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:343218219153:subnet/subnet-014a34e66b4e987f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-014a34e66b4e987f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "343218219153",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kafka-enterprise-orders-public-b"
            },
            "tags_all": {
              "Name": "kafka-enterprise-orders-public-b"
            },
            "vpc_id": "vpc-008f4e611a0d47f81"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:343218219153:vpc/vpc-008f4e611a0d47f81",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0d1ce136fb7a73e9e",
            "default_route_table_id": "rtb-036921cdb306b97bb",
            "default_security_group_id": "sg-08b8275b467c12491",
            "dhcp_options_id": "dopt-0469dec5702477219",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-008f4e611a0d47f81",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-036921cdb306b97bb",
            "owner_id": "343218219153",
            "tags": {
              "Name": "kafka-enterprise-orders-vpc"
            },
            "tags_all": {
              "Name": "kafka-enterprise-orders-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}